tdf#157476 tdf#150861 - sc fix autoFilter is filtering incorrectly

caused by rounding problem with duplicated values.

We need to store the rounded values, based on the numberformat
precision, otherwise later can cause problems at removing the duplicated
values.

Regression from: f6b143a57d9bd8f5d7b29febcb4e01ee1eb2ff1d

Change-Id: I19f5248122ffca1e52adb96714df79dd9c64b23c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178683
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
Tested-by: Jenkins
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178737